<resources>
    <string name="app_name">广告监管</string>
    <string name="cancel_locationpermission">您已取消了定位权限，无法进行定位！</string>
    <string name="cancel_camerapermission">您已取消了摄像头权限，无法拍照、录像！</string>
    <string name="obtain_data_fail">获取数据失败！</string>
    <string name="region_select">选择区域</string>
    <string name="change_address">修改地址</string>

    <!-- 采集更改位置界面 -->
    <string name="changeaddress_title">当前位置</string>
    <string name="changeaddress_startdrag">开始拖动吧！</string>
    <string name="changeaddress_dragging">拖动中...</string>
    <string name="changeaddress_lat">纬度：</string>
    <string name="changeaddress_lng">经度：</string>
    <string name="changeaddress_address">地址：</string>
    <string name="changeaddress_addresserror">不对？请长按后拖动更改！</string>
    <string name="changeaddress_search">正在搜索卫星...</string>
    <string name="changeaddress_location">正在定位中...</string>

    <!-- 视频录制页面 -->
    <string name="videorecording_record">点击录制</string>
    <string name="videorecording_stop">保存退出</string>
    <string name="videorecording_nosdcard">没有内存卡，不能录制视频！</string>
    <string name="takephoto_nosdcard">没有内存卡，不能拍照！</string>

    <!-- 登录界面 -->
    <string name="loginaccount">用户名</string>
    <string name="loginpassword">密码</string>
    <string name="loginregister">立即注册</string>
    <string name="loginlogin">登录</string>
    <string name="loginforget">忘记密码</string>
    <string name="logininputaccount">请输入用户名</string>
    <string name="logininputpassword">请输入密码</string>
    <string name="logining">正在登录...</string>
    <string name="loginsuccess">登录成功</string>
    <string name="loginfail">登录失败</string>

    <!--地图界面-->
    <string name="ad">广告</string>
    <string name="survey">监测</string>
    <string name="handle">处理</string>
    <string name="collection">采集</string>
    <string name="nolocation">暂无定位结果</string>
    <string name="appexit">程序即将退出</string>
    <string name="navi">导航</string>
    <string name="mediadetail">媒体详情</string>
    <string name="aroundnomedia">附近没有广告牌</string>

    <!--媒体详情-->
    <string name="mediacode">媒体编号：</string>
    <string name="mediatype">媒体形式：</string>
    <string name="areaattribute">区域属性：</string>
    <string name="mediaaddress">媒体位置：</string>
    <string name="mediaregion">行政区域：</string>
    <string name="organizename">机构名称：</string>
    <string name="organizephone">机构电话：</string>
    <string name="trafficnumber">交通编号：</string>
    <string name="urbanmanagernumber">城管编号：</string>
    <string name="lawpage">违法版面：</string>
</resources>
