<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uicolor_write">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/login_headimg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/circle_head"
            android:src="@drawable/headdefault" />

        <EditText
            android:id="@+id/login_accountet"
            style="@style/Login_EditText"
            android:layout_below="@id/login_headimg"
            android:drawableLeft="@drawable/usernamelogo"
            android:hint="@string/loginaccount" />

        <EditText
            android:id="@+id/login_passwordet"
            style="@style/Login_EditText"
            android:layout_below="@id/login_accountet"
            android:drawableLeft="@drawable/pwdlogo"
            android:hint="@string/loginpassword"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/login_passwordet"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_loginbtn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/loginlogin"
                android:textSize="14sp" />

            <Button
                android:id="@+id/login_forgetbtn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1.0"
                android:text="@string/loginforget"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llLogin"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:background="#fff3f3f3" />

            <Button
                android:id="@+id/login_registerbtn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:background="@color/uicolor_write"
                android:text="@string/loginregister"
                android:textColor="@color/uicolor_lightblue" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>