<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MapActivity">

    <include
        android:id="@+id/changeaddress_titlebar"
        layout="@layout/layout_titlebar" />

    <com.amap.api.maps.MapView
        android:id="@+id/changeaddress_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/changeaddress_titlebar" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeaddress_titlebar"
        android:layout_marginBottom="10dp"
        android:background="#33000000"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <LinearLayout
            android:id="@+id/changeaddress_searchlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/changeaddress_waitprogressbar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/changeaddress_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/changeaddress_search" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/changeaddress_paramlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/changeaddress_titletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/changeaddress_title"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/changeaddress_lattext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/changeaddress_lat"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/changeaddress_lngtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/changeaddress_lng"
                android:textColor="#000000"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/changeaddress_addresstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/changeaddress_address"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <ProgressBar
                    android:id="@+id/changeaddress_progressbar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone" />
            </LinearLayout>


            <TextView
                android:id="@+id/changeaddress_errortext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/changeaddress_addresserror"
                android:textColor="#ff0000"
                android:textSize="16dp" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
